fix: fixed the overflow of image name from container. closes #1114

--- a/src/components/ImageUpload/imageUpload.css
+++ b/src/components/ImageUpload/imageUpload.css
@@ -26,7 +26,7 @@
   cursor: pointer;
 }
 .image-footer .image-name {
-  white-space: nowrap;
+  /* white-space: nowrap; */
   cursor: pointer;
 }
 .image-footer .image-thumbnail {
